1.17 2022-12-12
~~~~~~~~~~~~~~~

* Added additional conventions for variable names related to areosol/cloud
  properties.

* Fixed issue with geographical area overlap calculation and improvided
  performance of performing operations on geographical polygon data.

* Windows .msi installer now allows HARP component selection for core, Python,
  IDL, MATLAB, and R.

* Updates to product ingestions:
  - AEOLUS L2B: properly split datetime, datetime_start, and datetime_stop
  - CCI L3 O3 LP: fixed wrong variable name
  - EarthCARE: added additional product types and updated ACM_CAP_2B
  - ECMWF GRIB: changed RWC/SWC/LWC/IWC variable names
  - OSIRIS L2: fixed wrong variable names
  - TES TL2ATMTN/TL2ATMTL: fixed wrong variable names

1.16 2022-10-31
~~~~~~~~~~~~~~~

* Improved algorithm to calculate center point from latitude/longitude bounds
  polygon.

* Add derivation of time dependent from time indepent for datetime variables.

* Updates to product ingestions:
  - GEOMS PANDORA: added systematic/random uncertainty for effective
    temperature, renamed H2CO in harp variable names to HCHO.
  - OCO: added support for ACOS/OCO-2/OCO-3 L2/L3 products.
  - Ozone CCI L3 LP: fixed memory issue when reading
    merged_ozone_concentration.
  - S5P L2 HCHO: added amf=clear_sky ingestion option

1.15.1 2022-05-18
~~~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - CLOUDNET L2 classification: fixed fillvalue mapping of values to NaN.
  - GEOMS PANDORA: fixes for template V003 support
  - GEOMS FTIR: allow instrument lat/lon/alt variables to be one-dimensional
    with replicated values.
  - GEOMS UVVIS.BREWER: added random+systematic uncertainty variables.
  - S5P L2 CO: fixed vertical ordering of new apriori profile.

1.15 2022-03-14
~~~~~~~~~~~~~~~

* Fixed issue where bin() operation was removing scalar enumeration variables.

* Updates to product ingestions:
  - ECMWF GRIB: fixed parameter mapping for CAMS model data that uses